SC-145-firm controller updated
